solve collapse problem on desktop

--- a/src/app/food/view/food-row/mobile/bottom-preview/bottom-preview.scss
+++ b/src/app/food/view/food-row/mobile/bottom-preview/bottom-preview.scss
@@ -55,6 +55,6 @@
   transition: transform 0.3s cubic-bezier(.4,2,.3,1), stroke 0.2s;
 }
 
-.chevron-icon.collapsed {
+.chevron-icon:not(.collapsed) {
   transform: rotate(180deg);
 }
